added version parameter to image name

--- a/busybox.tmpl
+++ b/busybox.tmpl
@@ -5,7 +5,7 @@ metadata:
   namespace: default
 spec:
   containers:
-  - image: busybox
+  - image: busybox:{{.Values.version}}
     command:
       - sleep
       - "3600"
